# RGBLedBrightnessControl-Project_TivaC-Sprints

./: .gitignore  CMakeLists.txt  README.md
Documents/: ARM RGB LED Brightness Control - Backlog and test protocol.xlsx
Documents/Flowcharts - Src/: APP.drawio  GPT.drawio  RGB LED Control V3.0 - System Modules.drawio  pwm.drawio
RGB-BRIGHTNESS/: LED_Control.uvguix.ME  LED_Control.uvguix.hossam  LED_Control.uvoptx  LED_Control.uvprojx  main.c
RGB-BRIGHTNESS/APP/: app.c
RGB-BRIGHTNESS/HAL/btn/: btn_interface.h  btn_program.c
RGB-BRIGHTNESS/HAL/led/: led_interface.h
RGB-BRIGHTNESS/HAL/pwm/: pwm_interface.h  pwm_linking_cfg.c  pwm_linking_cfg.h  pwm_program.c
RGB-BRIGHTNESS/LIB/: std.h
RGB-BRIGHTNESS/Listings/: startup_tm4c123.lst
RGB-BRIGHTNESS/MCAL/gpt/: gpt_interface.h  gpt_linking_cfg.c  gpt_linking_cfg.h  gpt_private.h  gpt_program.c
RGB-BRIGHTNESS/MCAL/systick/: systick_linking_config.h  systick_program.c
RGB-BRIGHTNESS/Objects/: LED_Control.axf  LED_Control.build_log.htm  LED_Control.hex  LED_Control.htm  LED_Control.lnp  LED_Control_Target 1.dep
RGB-BRIGHTNESS/RTE/Device/TM4C123GH6PM/: system_TM4C123.c
RGB-BRIGHTNESS/RTE/_Target_1/: RTE_Components.h
